# Viva-munk

./: .gitignore  LICENSE  README.md  pyproject.toml  workspace.yaml
.github/workflows/: pages.yml  regenerate-report.yml
doc/: index.html
docs/superpowers/plans/: 2026-05-13-studies-phase-1.md  2026-05-14-studies-phase-1.5-native-handlers.md  2026-05-15-pbg-biomodels-absorb-bundle.md  2026-05-15-pbg-tellurium-pbg-copasi.md
docs/superpowers/specs/: 2026-05-13-studies-design.md  2026-05-13-vivarium-dashboard-package-as-workspace-design.md  2026-05-15-pbg-biomodels-absorb-bundle-design.md  2026-05-15-pbg-tellurium-pbg-copasi-design.md
multi_cell/: __init__.py  core.py  pymunk_agent_type.py
multi_cell/composites/: __init__.py
multi_cell/experiments/: cli.py  multibody_tests.py  registry.py  replay.py  report.py  runner.py  test_suite.py
multi_cell/experiments/documents/: __init__.py  attachment.py  bending_pressure.py  biofilm.py  chemotaxis.py  daughter_machine.py  glucose_growth.py  inclusion_bodies.py  mother_machine.py  quorum_sensing.py
multi_cell/plots/: multibody_plots.py
multi_cell/processes/: cell_field_exchange.py  grow_divide.py  inclusion_body.py  multibody.py  pressure.py  quorum_sensing.py  remove_crossing.py  secrete_eps.py
multi_cell/types/: __init__.py  positive.py
multi_cell/visualizations/: __init__.py  particle_traces.py
pymunk_process/: __init__.py  multibody.py  multibody2.py  pymunk_minimal.py  units.py
pymunk_process/experiments/: multibody_tests.py
pymunk_process/plots/: multibody_plots.py  snapshots.py  snapshots_video.py
pymunk_process/processes/: grow_divide.py  multibody.py
viva_munk/: __init__.py  core.py  pymunk_agent_type.py
viva_munk/composites/: __init__.py
viva_munk/experiments/: cli.py  registry.py  replay.py  report.py  runner.py  test_suite.py
viva_munk/experiments/documents/: __init__.py  attachment.py  bending_pressure.py  biofilm.py  chemotaxis.py  daughter_machine.py  glucose_growth.py  inclusion_bodies.py  mother_machine.py  quorum_sensing.py
viva_munk/plots/: multibody_plots.py
viva_munk/processes/: cell_field_exchange.py  chemotaxis.py  diffusion_advection.py  field_decay.py  grow_divide.py  inclusion_body.py  multibody.py  pressure.py  remove_crossing.py  secrete_eps.py
viva_munk/types/: __init__.py  positive.py
viva_munk/visualizations/: __init__.py  cell_mass_traces.py
