[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viva-munk"
version = "0.0.1"
description = "multi-cell simulations with pymunk 2d physics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  {name = "Eran Agmon", email = "agmon.eran@gmail.com"},
  {name = "Ryan Spangler"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "process-bigraph",
    "bigraph-schema>=0.0.60",
    "bigraph-viz",
    "pymunk",
    "numpy",
    "matplotlib",
    "Pillow",
    "plum-dispatch",
    # viva_munk/visualizations/* subclass pbg_superpowers.visualization.Visualization.
    "pbg-superpowers",
    # NOTE on spatio-flux: viva_munk/__init__.py imports
    # `from spatio_flux.visualizations import (...)` at module-import
    # time, but no PyPI-published spatio-flux release ships a
    # `visualizations/` submodule (it was dropped in 1.4 in favour of
    # `plots/`; the dev 1.0.0 still has it but is not on PyPI). Listing
    # `spatio-flux` here would let pip install succeed but the import
    # would still fail. Tracked separately: either refactor viva_munk's
    # __init__ to use spatio_flux.plots, vendor what we need, or
    # publish a 1.0.x patch with the legacy visualizations layout.
    # Until then, viva-munk is installable only against a local
    # editable spatio-flux checkout that has visualizations/.
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipdb",
    "build",
    "twine>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/vivarium-collective/Viva-munk"
Repository = "https://github.com/vivarium-collective/Viva-munk"

[tool.setuptools]
packages = [
    "viva_munk",
    "viva_munk.processes",
    "viva_munk.experiments",
    "viva_munk.plots",
    "viva_munk.types",
]

# sqlemitter branch: use the SQLiteEmitter from the local process-bigraph
# checkout (sqlite-emitter branch). To activate, run:
#   uv sync  (if using uv)
#   or: pip install -e ../process-bigraph
[tool.uv.sources]
process-bigraph = { path = "../process-bigraph", editable = true }
