[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viva-munk"
version = "0.0.1"
description = "multi-cell simulations with pymunk 2d physics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  {name = "Eran Agmon", email = "agmon.eran@gmail.com"},
  {name = "Ryan Spangler"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "process-bigraph",
    "bigraph-schema>=0.0.60",
    "bigraph-viz",
    "pymunk",
    "numpy",
    "matplotlib",
    "Pillow",
    "plum-dispatch",
    # viva_munk/visualizations/* subclass pbg_superpowers.visualization.Visualization.
    "pbg-superpowers",
    # NOTE on spatio-flux: viva_munk/__init__.py imports
    # `from spatio_flux.visualizations import (...)` at module-import
    # time, but no PyPI-published spatio-flux release ships a
    # `visualizations/` submodule (it was dropped in 1.4 in favour of
    # `plots/`; the dev 1.0.0 still has it but is not on PyPI). Listing
    # `spatio-flux` here would let pip install succeed but the import
    # would still fail. Tracked separately: either refactor viva_munk's
    # __init__ to use spatio_flux.plots, vendor what we need, or
    # publish a 1.0.x patch with the legacy visualizations layout.
    # Until then, viva-munk is installable only against a local
    # editable spatio-flux checkout that has visualizations/.
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipdb",
    "build",
    "twine>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/vivarium-collective/Viva-munk"
Repository = "https://github.com/vivarium-collective/Viva-munk"

# Auto-discover every viva_munk subpackage at build time. The hand-
# maintained list previously skipped `viva_munk.composites` AND
# `viva_munk.visualizations`, so the published wheel didn't include
# those directories at all and `import viva_munk` broke on any clean
# install (the package's own __init__.py imports them). The
# auto-discovery pattern matches what spatio-flux does.
[tool.setuptools.packages.find]
where = ["."]
include = ["viva_munk*"]
exclude = ["tests*", "docs*", "studies*"]

# NOTE: this package previously declared a [tool.uv.sources] override
# pointing process-bigraph at `../process-bigraph` (editable). That
# section is dev-only convenience for working in a sibling checkout
# layout — but it leaks into downstream consumers when viva-munk is
# pulled as a git dependency, because uv resolves the transitive
# source path as `subdirectory=../process-bigraph` of the git URL,
# which doesn't exist. Removed for now; if you need the local
# editable checkout, install it explicitly:
#
#   pip install -e ../process-bigraph
#
# or add the override in YOUR project's pyproject.toml (not here).
